spacing fix

--- a/src/styles/components/course_detail_page.module.scss
+++ b/src/styles/components/course_detail_page.module.scss
@@ -11,7 +11,7 @@
   }
 
   @media (max-width: 800px) {
-    margin: 50px 5px !important;
+    margin: 50px 20px !important;
   }
 
   @media (max-width: 1150px) {
@@ -476,7 +476,7 @@
       transition: max-height 0.5s ease-out;
       background: #fff;
 
-      filter: drop-shadow(0px 0px 5px #dee8f1);
+      filter: drop-shadow(0px 0px 5px #dee8f1be);
       .action_btn {
         display: flex;
         justify-content: space-between;
